--- a/js-jest/package.json
+++ b/js-jest/package.json
@@ -23,6 +23,9 @@
   },
   "homepage": "https://github.com/emilybache/GildedRose-Refactoring-Kata",
   "devDependencies": {
-    "jest": "^24.9.0"
+    "0s": "^1.0.0",
+    "install": "^0.13.0",
+    "jest": "^24.9.0",
+    "npm": "^6.14.9"
   }
 }
